[package]
name = "crypto_news_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
actix-web = "4.3"
actix-files = "0.6"
scraper = "0.23.1"
futures = "0.3"
thiserror = "2.0.12"
tera = "1.19"
parking_lot = "0.12"